Started Project Menu

--- a/translation/translation.csv
+++ b/translation/translation.csv
@@ -11,3 +11,4 @@ ORTHOGRAPHY_MODULE,Orthography,Ortografía,Ortografia
 LOGOGRAPHY_MODULE,Logography,Logogramas,Ideogramas
 CORPUS_MODULE,Corpus,Corpus,Corpus
 KEYBOARD_MODULE,Keyboard,Teclado,Teclado
+NAME_OF_LANGUAGE,Language Name,Nombre del Idioma,Nome da Lingua
