Project Menu Complete for Now

--- a/translation/translation.csv
+++ b/translation/translation.csv
@@ -12,3 +12,4 @@ LOGOGRAPHY_MODULE,Logography,Logogramas,Ideogramas
 CORPUS_MODULE,Corpus,Corpus,Corpus
 KEYBOARD_MODULE,Keyboard,Teclado,Teclado
 NAME_OF_LANGUAGE,Language Name,Nombre del Idioma,Nome da Lingua
+AUTONYM,Endonym,Endónimo,Endônimo
