Saving/loading screen in home menu

--- a/translation/translation.csv
+++ b/translation/translation.csv
@@ -22,3 +22,5 @@ LEMMA,Lemma,Lema,Lema
 PRONUNCIATION,Pronunciation,Pronunciación,Pronúncia
 DICTIONARY_BUTTON_ADD_TOOLTIP,Add Word to Dictionary,Agregar Palabra al Diccionario,Adicionar Palavra ao Dicionário
 DICTIONARY_BUTTON_REMOVE_TOOLTIP,Remove Word from Dictionary,Eliminar Palabra del Diccionario,Remover Palavra do Dicionário
+OPEN_FILE,Open File,Abrir Archivo,Abrir Arquivo
+SAVE_FILE,Save to Disk,Guardar en Disco,Salvar no Disco
