--- a/translation/translation.csv
+++ b/translation/translation.csv
@@ -41,3 +41,6 @@ ADD_WORD_CLASS,Add Part of Speech or Word Class,Agregar Parte del Discurso o Cla
 BRIEF_GRAMMAR_OVERVIEW_TOOLTIP,Brief Grammar Overview\ne.g. "English is a Germanic language spoken across the world...",Gramática Breve\np.ej. "Español es una idioma romance que se habla en América Latina e Iberia...",Gramática Breve\npor exemplo; "Português é uma língua românica que é falada no Brasil e em Portugal..."
 CONVERT_FROM_XSAMPA,Convert from X-Sampa,Convertir de "X-Sampa",Converter de "X-Sampa"
 LOCK,Lock,Cerrar,Trancar
+NEW_GRAMMAR_TABLE,New Grammar Table,Nueva Tabla Gramatical,Nova Tabela de Gramática
+GRAMMAR_INFORMATION,Information,Información,Informação
+GRAMMAR_TABLES,Grammar Tables,Tablas Gramaticales,Tabelas de Gramática
