Evolution timeline (no functionality)

--- a/translation/translation.csv
+++ b/translation/translation.csv
@@ -45,3 +45,4 @@ LOCK,Lock,Cerrar,Trancar
 NEW_GRAMMAR_TABLE,New Grammar Table,Nueva Tabla Gramatical,Nova Tabela de Gramática
 GRAMMAR_INFORMATION,Information,Información,Informação
 GRAMMAR_TABLES,Grammar Tables,Tablas Gramaticales,Tabelas de Gramática
+TIMELINE,Timeline,Cronología,Cronologia
