--- a/translation/translation.csv
+++ b/translation/translation.csv
@@ -46,3 +46,5 @@ NEW_GRAMMAR_TABLE,New Grammar Table,Nueva Tabla Gramatical,Nova Tabela de Gramá
 GRAMMAR_INFORMATION,Information,Información,Informação
 GRAMMAR_TABLES,Grammar Tables,Tablas Gramaticales,Tabelas de Gramática
 TIMELINE,Timeline,Cronología,Cronologia
+YEAR_ABBREVIATION,yr.,año,ano
+NEW_WORD_MUTATION,New Word,Nueva Palabra,Nova Palavra
